Changing winner height to prevent viewshift and removing text while waiting for the game

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body {
 }
 
 #winner {
-    line-height: 2.3rem;
+    height: 3rem;
 }
 
 #winner.animate {
